--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.4",
+    "ace-builds": "^1.4.14",
     "next": "12.1.6",
+    "openai": "^2.0.5",
+    "openai-api": "^1.3.1",
     "react": "18.1.0",
+    "react-ace": "^10.1.0",
+    "react-ace-editor": "0.0.3",
     "react-dom": "18.1.0"
   },
   "devDependencies": {
